2015-09-09 (0.8.4)  Robin Gareus <robin@gareus.org>
* drop jack requirement for OSX

2015-09-09 (0.8.3)  Robin Gareus <robin@gareus.org>
* defined LARGEFILE64 for huge videos
* fix OSX openGL init (El Capitan support)

2015-06-24 (0.8.2)  Robin Gareus <robin@gareus.org>
* fix CPU-hog after end of video
* fix compilation with gcc5
* fix typos in manaul
* various build-system updates (OSX, win)

2014-11-23 (0.8.1)  Robin Gareus <robin@gareus.org>
* fix OSX remote-control threading
* X11 file open dialog
* add recently-used files list
* show splash screen when no file is open
* various typo fixes

2014-08-22 (0.8.0)  Robin Gareus <robin@gareus.org>
* fix various typos
* prepare build-stack for binary releases
* re-add windows on-jack-shutdown handler
* update app icon
* fix some compiler warnings
* request X11-focus after file drag/drop.

2014-08-15 (0.8.0-rc3)  Robin Gareus <robin@gareus.org>
* embed font-file in Linux statically linked binaries
* improve overall consistency, interaction and display:
 - add "Offset" menu to document all keyboard shortcuts
 - "Close Video" menu entry
 - dedicated VTC OSD as alternative to frame-number
 - remove 'q' quit shortcut (use Esc or Ctrl-Q)
 - darker 'cross' for RGB[A] display (was already grey for YUV)
* improve OSD text and optimize OSD re-exposure
* Add File Time and Geometry Info OSD
* update icons and splash image
* fix various typos
* re-use color-eq bars for progress-bar.
* new example/test video
* update xjadeorc documentation

2014-07-31 (0.8.0-rc2)  Robin Gareus <robin@gareus.org>
* update usage() help text
* add --osc-doc option
* rearrange remote-control commands and improve their doc.
* re-do website and documentation
* amend seek-index, create table for PTS
* disable screensaver
* overhaul windows UI (threading, draw while resize, fullscreen screen)
* proper monospace for timecode + framenumber OSD
* complete migration to 64 bit timecode
* enable letterbox by default