@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.5</h2>
+<p>Update video-decoder library:
+Add support for upcoming ffmpeg-2.9, use ffmpeg-2.8.2 for binaries.
+</p>
+
 <h2>Version 0.8.3, 0.8.4</h2>
 <p>
 Xjadeo version 0.8.3 includes updates for OS X 10.11 (El Capitan),
