@@ -1,10 +1,10 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
-.TH XJADEO "1" "October 2015" "xjadeo version 0.8.4" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
+.TH XJADEO "1" "November 2015" "xjadeo version 0.8.5" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
 .B xjadeo
-[ \fIOPTIONS \fR] [ \fIvideo-file \fR]
+[ \fI\,OPTIONS \/\fR] [ \fI\,video-file \/\fR]
 .SH DESCRIPTION
 xjadeo \- the X Jack Video Monitor
 .PP
@@ -102,22 +102,16 @@ The <port> argument is midi driver specific:
 .TP
 jack\-midi:
 specify a midi port name to connect to,
-.IP
+.TP
 or "" to not auto connect.
+alsa\-seq:  specify ID to connect to (\fB\-1\fR: none)
 .TP
-alsa\-seq:
-specify ID to connect to (\fB\-1\fR: none)
-.IP
 eg. \fB\-m\fR ardour or \fB\-m\fR 80
+alsa\-raw:  specify hardware device
 .TP
-alsa\-raw:
-specify hardware device
-.IP
 eg. \fB\-m\fR hw:1,0 or \fB\-m\fR 1
+portmidi:  numeric id; \fB\-1\fR: autodetect
 .TP
-portmidi:
-numeric id; \fB\-1\fR: autodetect
-.IP
 a value > \fB\-1\fR specifies the port number to use.
 use '\-v \fB\-m\fR \fB\-1\fR' to list midi ports.
 .TP
@@ -226,26 +220,25 @@ At startup xjadeo reads the following resource configuration files in the
 following order:
 .TP
 system wide:
-/etc/xjadeorc or /usr/local/etc/xjadeorc
+\fI\,/etc/xjadeorc\/\fP or \fI\,/usr/local/etc/xjadeorc\/\fP
 .TP
 old user config:
 $HOME/.xjadeorc
 .TP
 user config:
-$XDM_CONFIG_HOME/xjadeo/xjadeorc (usually $HOME/.config/)
+\fI\,$XDM_CONFIG_HOME/xjadeo/xjadeorc\/\fP (usually $HOME/.config/)
 .TP
 on OSX:
-$HOME/Library/Preferences/xjadeorc
+\fI\,$HOME/Library/Preferences/xjadeorc\/\fP
 .TP
 on Windows:
 $HOMEDRIVE$HOMEPATH\exjadeorc
-.IP
+.TP
 and $HOMEDRIVE$HOMEPATH\eLocal Settings\exjadeorc
-.IP
 (usually C:\eDocuments and Settings\e<Username>\e)
 .TP
 project specific:
-$PWD/xjadeorc
+\fI\,$PWD/xjadeorc\/\fP
 .PP
 Every line in the configuration file is a KEY=VALUE pair. If the first
 character on a line is either is a literal '#' or ';', the line is ignored.
@@ -363,9 +356,9 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.4
+scm\-v0.8.5
 .IP
-compiled with: AVFORMAT=0x361d68 AVCODEC=0x363b64 AVUTIL:0x334965
+compiled with: AVFORMAT=0x382865 AVCODEC=0x383c64 AVUTIL:0x361f64
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
