@@ -1,10 +1,10 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.4.
-.TH XJREMOTE "1" "October 2015" "xjremote version 0.8.4" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.3.
+.TH XJREMOTE "1" "November 2015" "xjremote version 0.8.5" "User Commands"
 .SH NAME
 xjremote \- X Jack Video Monitor Remote Control
 .SH SYNOPSIS
 .B xjremote[
-\fIOPTIONS \fR]
+\fI\,OPTIONS \/\fR]
 .SH DESCRIPTION
 xjremote \- jack video monitor remote control utility
 .PP
@@ -54,7 +54,7 @@ Report bugs to Robin Gareus <robin@gareus.org>
 Website: <https://github.com/x42/xjadeo>
 .TP
 built from:
-scm\-v0.8.4
+scm\-v0.8.5
 .TP
 configuration:
 [ POSIX\-MQueue ]
